--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,49 @@ header {
   padding: 1rem 3rem;
 
 }
+
+
+/* Info-Links */
+
+.info-links {
+  background-color: #f4f4f4;
+  width: 100%;
+  margin: 0 auto;
+  padding: 10rem 5rem;
+  text-align: center;
+  
+}
+
+.info-link-container{
+  display: inline-block;
+  width: 24%;
+  color: #926239;
+
+}
+
+.info-link-logo {
+  font-size: 8rem;
+  transition: all .2s;
+  cursor: pointer;
+}
+
+
+.info-link-logo:hover{
+  transform: translateY(-5px); 
+}
+
+
+
+.info-link-text {
+  display: block;
+  font-size: 3rem;
+  margin-top: 2rem;
+  color: #533820;
+  cursor: pointer;
+}
+
+
+
 /* Animation */
 
 @keyframes opacity {
