--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,6 @@ a {
   color: inherit;
 }
 
-hr {
-  background-color: #f4f4f4;
-  width: 8%;
-  border: none;
-  border-top:1.6rem dotted #5338206c;
-  margin: 0 auto;
-}
-
 html {
   font-size: 62.5%; 
 }
@@ -34,6 +26,11 @@ header {
   color: #926239;
 
   text-align: center;
+
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
   
 }
 
@@ -41,7 +38,7 @@ header {
   font-size: 5rem;
   line-height: 1.2  ;
   text-transform: capitalize;
-  padding-top: 38vh;  
+
   animation: opacity 1.8s;
 }
 
@@ -52,7 +49,7 @@ header {
 }
 
 .heading-btn {
-  display: inline-block;
+
   border: 1px solid #926239;
   border-radius: 1rem;
   box-shadow: 0 4px 5px #9263398c;
@@ -81,10 +78,16 @@ header {
 /* Description */
 
 .beach-description {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+
   background-color: #926239;
   color: white;
 
 }
+
+
 
 .description-header {
   font-size: 3.5rem;
@@ -95,25 +98,26 @@ header {
 }
 
 .description-block {
+  display: flex;
   padding-bottom: 10rem;
-  width: 80%;
-  margin: 0 auto;
-  text-align: center;
+  width: 80%;   
+
+}
+
+.description-block:nth-child(3) {
+  flex-direction: row-reverse;
 }
 
 .description-img {
-  width: 500px;
-  height: 500px;
+  width: 50%;
+  height: 700px;
   object-fit: cover;
   box-shadow: 2px 2px 10px #00000071;
   object-position: top;
 }
 
 .description-text-block {
-  display: inline-block;
-  text-align: left;
   width: 50%;
-  vertical-align: top;
   font-size: 1.8rem;
   padding: 1rem 3rem;
 
@@ -122,6 +126,7 @@ header {
 /* Info-Links */
 
 .info-links {
+  display: flex;
   background-color: #f4f4f4;
   width: 100%;
   margin: 0 auto;
@@ -132,8 +137,8 @@ header {
   
 }
 
+
 .info-link-container{
-  display: inline-block;
   width: 24%;
   color: #926239;
 
@@ -160,6 +165,11 @@ header {
 
 /* Hotel Info */
 
+.hotels-container {
+  display: flex;
+
+}
+
 .hotel-info {
   text-align: center;
   background-color: #926239;
@@ -175,12 +185,9 @@ header {
 }
 
 .hotel {
-  display: inline-block;
-  width: 33.17%;
   height: 50rem;
-  vertical-align: top;
   padding: 5rem;
-
+  flex: 1;
 }
 
 .hotel-img {
@@ -280,5 +287,75 @@ footer {
 
   100% {
     transform: translateY(0);
+  }
+}
+
+@media screen and (max-width: 378px) {
+  html {
+    font-size: 40%;
+  }
+
+  .heading-text {
+    width: 70%;
+    text-align: center;
+  }
+
+
+  .description-block {
+    flex-flow: column;
+    align-items: center;  
+    width: 100%;
+  }
+
+  .description-block:nth-child(3) {
+    flex-direction: column;
+  }
+
+  .description-img {
+    width: 50%;
+    height: auto;
+  }
+
+  .description-text-block {
+    width: 80%;
+    text-align: center;
+  }
+
+  .info-links {
+    flex-flow: column;
+    align-items: center;
+  }
+
+  .info-link-container:not(:last-child){
+    margin-bottom: 30px;
+    width: 50%;
+  }
+
+  .hotel-info {
+    display: flex;
+    flex-flow: column;
+  }
+
+  .hotels-container {
+    flex-flow: column;
+  }
+
+  .first-hotel {
+    border-top-right-radius: 0;
+  }
+
+
+  .third-hotel {
+    border-top-left-radius: 0;
+  }
+
+  .copy-text {
+    width: 90%;
+    margin-bottom: 10px;
+  }
+  
+  .media-logo{
+    font-size: 2rem;
+    margin-bottom: 10px;
   }
 }
